# graphrag_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: models.yaml
docker/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/chat/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/kb/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_password_auth.py
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  graph.py  tools.py
src/api/: __init__.py  admin_routes.py  auth_routes.py  chat_routes.py  document_routes.py  kb_routes.py  models_routes.py
src/auth/: __init__.py  dependencies.py  jwt.py  password.py
src/auth/providers/: __init__.py  base.py  github.py  google.py
src/core/: __init__.py  tenant.py
src/db/: __init__.py  models.py  session.py
src/indexing/: __init__.py  loaders.py  processor.py
src/knowledge_graph/: __init__.py  extraction.py  tenant_graph.py
src/llm/: __init__.py  embeddings.py  groq_adapter.py  model_registry.py
src/object_store/: __init__.py  minio_client.py
src/vector_store/: __init__.py  pgvector_client.py
tests/: test_agent.py  test_auth.py  test_document_processing.py  test_email_auth_routes.py  test_knowledge_graph.py  test_model_registry.py  test_oauth2_token.py  test_password.py  test_tenant.py
(+3 files in other folders)
